// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseInternalTransaction > should parse contract call transaction 1`] = `
{
  "abi": "[{"type":"function","name":"deposit","constant":false,"stateMutability":"payable","payable":true,"inputs":[],"outputs":[]}]",
  "data": "0xd0e30db0",
  "formatted": [
    "0x11fE4B6AE13d2a6055C8D9cF65c55bac32B5d844",
    0,
    "20000000000000000000",
    "0xd0e30db0",
  ],
  "isValid": true,
  "method": {
    "constant": false,
    "inputs": [],
    "name": "deposit",
    "outputs": [],
    "payable": true,
    "stateMutability": "payable",
    "type": "function",
  },
  "parameters": [],
  "to": "0x11fE4B6AE13d2a6055C8D9cF65c55bac32B5d844",
  "type": "contractInteraction",
  "value": "20000000000000000000",
}
`;

exports[`parseInternalTransaction > should parse raw transaction 1`] = `
{
  "data": "0x",
  "formatted": [
    "0x556B14CbdA79A36dC33FcD461a04A5BCb5dC2A70",
    0,
    "1",
    "0x",
  ],
  "isValid": true,
  "to": "0x556B14CbdA79A36dC33FcD461a04A5BCb5dC2A70",
  "type": "raw",
  "value": "1",
}
`;

exports[`parseInternalTransaction > should parse transfer NFT transaction 1`] = `
{
  "collectable": {
    "address": "0x5A96CF3ace257Dfcc1fd3C037e548585124dc0C5",
    "id": "810",
    "name": "Weeedidit Palls #101",
    "tokenName": "Weee Did It Palz",
  },
  "data": "0x42842e0e000000000000000000000000000000000000000000000000000000000000dead000000000000000000000000000000000000000000000000000000000000dead00000000000000000000000000000000000000000000000000000000000000a2",
  "formatted": [
    "0x5A96CF3ace257Dfcc1fd3C037e548585124dc0C5",
    0,
    "0",
    "0x42842e0e000000000000000000000000000000000000000000000000000000000000dead000000000000000000000000000000000000000000000000000000000000dead00000000000000000000000000000000000000000000000000000000000000a2",
  ],
  "isValid": true,
  "recipient": "0x556B14CbdA79A36dC33FcD461a04A5BCb5dC2A70",
  "to": "0x5A96CF3ace257Dfcc1fd3C037e548585124dc0C5",
  "type": "transferNFT",
  "value": "0",
}
`;

exports[`parseInternalTransaction > should parse transfer token transaction 1`] = `
{
  "amount": "1",
  "data": "0x",
  "formatted": [
    "0x556B14CbdA79A36dC33FcD461a04A5BCb5dC2A70",
    0,
    "1",
    "0x",
  ],
  "isValid": true,
  "recipient": "0x556B14CbdA79A36dC33FcD461a04A5BCb5dC2A70",
  "to": "0x556B14CbdA79A36dC33FcD461a04A5BCb5dC2A70",
  "token": {
    "address": "main",
    "balance": "0",
    "chainId": "",
    "decimals": 18,
    "logoUri": "",
    "name": "Ether",
    "symbol": "ETH",
    "verified": false,
  },
  "type": "transferFunds",
  "value": "1",
}
`;

exports[`parseOSnapTransaction > should parse oSnap contract interaction transaction 1`] = `
{
  "_form": {
    "abi": [
      {
        "anonymous": false,
        "inputs": [
          {
            "indexed": true,
            "internalType": "address",
            "name": "user",
            "type": "address",
          },
          {
            "indexed": false,
            "internalType": "string",
            "name": "content",
            "type": "string",
          },
          {
            "indexed": true,
            "internalType": "string",
            "name": "tag",
            "type": "string",
          },
        ],
        "name": "NewPost",
        "type": "event",
      },
      {
        "inputs": [
          {
            "internalType": "string",
            "name": "content",
            "type": "string",
          },
          {
            "internalType": "string",
            "name": "tag",
            "type": "string",
          },
        ],
        "name": "post",
        "outputs": [],
        "stateMutability": "nonpayable",
        "type": "function",
      },
    ],
    "args": [
      "test",
      "test",
    ],
    "method": "post",
    "recipient": "0x000000000000cd17345801aa8147b8D3950260FF",
  },
  "_type": "contractCall",
  "data": "0x0ae1b13d000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000800000000000000000000000000000000000000000000000000000000000000004746573740000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000047465737400000000000000000000000000000000000000000000000000000000",
  "salt": "",
  "to": "0x000000000000cd17345801aa8147b8D3950260FF",
  "value": "0",
}
`;

exports[`parseOSnapTransaction > should parse oSnap raw transaction 1`] = `
{
  "_form": {
    "recipient": "0x556B14CbdA79A36dC33FcD461a04A5BCb5dC2A70",
  },
  "_type": "raw",
  "data": "0x",
  "salt": "",
  "to": "0x556B14CbdA79A36dC33FcD461a04A5BCb5dC2A70",
  "value": "1",
}
`;

exports[`parseOSnapTransaction > should parse oSnap safeImport transaction 1`] = `
{
  "_form": {
    "abi": [
      {
        "_isFragment": true,
        "constant": false,
        "gas": null,
        "inputs": [
          {
            "_isParamType": true,
            "arrayChildren": null,
            "arrayLength": null,
            "baseType": "address",
            "components": null,
            "indexed": null,
            "name": "to",
            "type": "address",
          },
          {
            "_isParamType": true,
            "arrayChildren": null,
            "arrayLength": null,
            "baseType": "uint256",
            "components": null,
            "indexed": null,
            "name": "amount",
            "type": "uint256",
          },
        ],
        "name": "transfer",
        "outputs": [],
        "payable": false,
        "stateMutability": "nonpayable",
        "type": "function",
      },
    ],
    "args": [
      "0xfE1552DA65FAcAaC5B50b73CEDa4C993e16d4694",
      "1000000000000000000",
    ],
    "method": "transfer",
    "recipient": "0x4F604735c1cF31399C6E711D5962b2B3E0225AD3",
  },
  "_type": "contractCall",
  "data": "0xa9059cbb000000000000000000000000fe1552da65facaac5b50b73ceda4c993e16d46940000000000000000000000000000000000000000000000000de0b6b3a7640000",
  "salt": "",
  "to": "0x4F604735c1cF31399C6E711D5962b2B3E0225AD3",
  "value": "0",
}
`;

exports[`parseOSnapTransaction > should parse oSnap transfer NFT transaction 1`] = `
{
  "_form": {
    "amount": "1",
    "nft": {
      "address": "0x5A96CF3ace257Dfcc1fd3C037e548585124dc0C5",
      "collection": "Weee Did It Palz",
      "id": "810",
      "name": "Weeedidit Palls #101",
    },
    "recipient": "0x556B14CbdA79A36dC33FcD461a04A5BCb5dC2A70",
  },
  "_type": "sendNft",
  "data": "0x42842e0e0000000000000000000000008edfcc5f141ffc2b6892530d1fb21bbcdc74b455000000000000000000000000556b14cbda79a36dc33fcd461a04a5bcb5dc2a70000000000000000000000000000000000000000000000000000000000000032a",
  "salt": "",
  "to": "0x5A96CF3ace257Dfcc1fd3C037e548585124dc0C5",
  "value": "0",
}
`;

exports[`parseOSnapTransaction > should parse oSnap transfer funds transaction 1`] = `
{
  "_form": {
    "amount": "1000000000000000",
    "recipient": "0x556B14CbdA79A36dC33FcD461a04A5BCb5dC2A70",
    "token": {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "decimals": 18,
      "name": "Ether",
      "symbol": "ETH",
    },
  },
  "_type": "sendToken",
  "data": "0x",
  "salt": "",
  "to": "0x556B14CbdA79A36dC33FcD461a04A5BCb5dC2A70",
  "value": "1000000000000000",
}
`;
